<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:stretchColumns="1"
        >
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="20dp"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="20dp"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"

            tools:context=".MyActivity">


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                >
                <View
                    android:id="@+id/image1"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/circle"
                    />
                <TextView
                    android:id="@+id/title1"
                    android:text="@string/First_picture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/image1"
                    android:layout_marginLeft="10dp"
                    android:layout_centerVertical="true"
                    android:textSize="10pt"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                >
                <TextView
                    android:id="@+id/exp1"
                    android:text="@string/First_explanation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="7pt"
                    />
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                >
                <View
                    android:id="@+id/image2"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/circle"
                    />
                <TextView
                    android:id="@+id/title2"
                    android:text="@string/Second_picture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/image2"
                    android:layout_marginLeft="10dp"
                    android:layout_centerVertical="true"
                    android:textSize="10pt"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                >
                <TextView
                    android:id="@+id/exp2"
                    android:text="@string/Second_explanation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="7pt"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                >
                <View
                    android:id="@+id/image3"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/circle"/>
                <TextView
                    android:id="@+id/title3"
                    android:text="@string/Third_picture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/image3"
                    android:layout_marginLeft="10dp"
                    android:layout_centerVertical="true"
                    android:textSize="10pt"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:id="@+id/exp3"
                    android:text="@string/Third_explanation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="7pt"
                    />
            </RelativeLayout>
        </LinearLayout>
    </TableLayout>
</ScrollView>